log/build_2026-03-15_02-33-09/sorting_executor_py/stderr.log
  File "/home/rcli/ws_sorting_final/install/sorting_executor_py/lib/python3.12/site-packages/sorting_executor_py/sorting_executor.py", line 74
    self.open_gripper()
    ^^^^
SyntaxError: expected 'except' or 'finally' block

